--- a/box/app/templates/index.html
+++ b/box/app/templates/index.html
@@ -8,10 +8,10 @@
     <h3>What is Burp Intruder?</h3>
     <p>Burp intruder is a tool in burp used for automating customized attacks against web applications. It enables you to configure attacks that send the same HTTP request over and over again, inserting different payloads into predefined positions each time.</p>
     <ul>
-    <li><a href = "sniper/index.html">Sniper</a></li>
-    <li><a href = "battering_ram/battering_ram.html">Battering Ram</a></li>
-    <li><a href = "pitchfork/pitchfork.html">Pitchfork</a></li>
-    <li><a href = "cluster_bomb/cluster_bomb.html">Cluster Bomb</a></li>  
+    <li><a href = "/sniper">Sniper</a></li>
+    <li><a href = "/battering_ram">Battering Ram</a></li>
+    <li><a href = "/pitchfork">Pitchfork</a></li>
+    <li><a href = "/cluster_bomb">Cluster Bomb</a></li>  
     </ul>
     <h3>Basic Terminology</h3>
     <ul>
