--- a/box/app/templates/cluster_bomb.html
+++ b/box/app/templates/cluster_bomb.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %} {% block main %}
+
 <!DOCTYPE html>
 <html>
   <body>
@@ -24,3 +26,5 @@
     <p>Cluster bomb is the brute force attempt of pitchfork. If the inputs are completely unrelated, you use cluster bomb and pray something works out.</p>
   </body>
 </html>
+
+{% endblock %}
