--- a/box/app/templates/index.html
+++ b/box/app/templates/index.html
@@ -1,7 +1,9 @@
+{% extends 'base.html' %} {% block main %}
+
 <!DOCTYPE html>
 <html>
   <body>
-    <h1> Introduction to Burp Intruder </h1>
+    <h1> Introduction to Burp Intruder :D</h1>
     <p> By The Weakest Link - Joseph Wu and Zesan Rahman </p>
     <!-- Site should have a header with link pages to each type of attack. Cluster bomb is the exception; that requires more work. -->
     <br></br>
@@ -19,3 +21,5 @@
     </ul>
   </body>
 </html>
+
+{% endblock %}
