--- a/box/app/templates/sniper.html
+++ b/box/app/templates/sniper.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %} {% block main %}
+
 <!DOCTYPE html>
 <html>
   <body>
@@ -18,3 +20,5 @@
     <p>Sniper is useful for running through a list of scripts to check for common vulnerabilities.  </p> <!--Mention javascript abusing-->
   </body>
 </html>
+
+{% endblock %}
