--- a/box/app/templates/battering_ram.html
+++ b/box/app/templates/battering_ram.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %} {% block main %}
+
 <!DOCTYPE html>
 <html>
   <body>
@@ -18,3 +20,5 @@
     <p>You'll use battering ram rarely, but it's useful for when you have to input the same thing in multiple parameters.</p>
   </body>
 </html>
+
+{% endblock %}
