--- a/box/app/templates/pitchfork.html
+++ b/box/app/templates/pitchfork.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %} {% block main %}
+
 <!DOCTYPE html>
 <html>
   <body>
@@ -24,3 +26,5 @@
     <p>Very useful when an attack needs 2 different but related parameters. For example, the username and password in the examples above.</p>
   </body>
 </html>
+
+{% endblock %}
