navbar and database creation

--- a/box/app/templates/base.html
+++ b/box/app/templates/base.html
@@ -18,19 +18,22 @@
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                 <ul class="navbar-nav ms-5">
                     <li class="nav-item pe-5">
-                        <a href="/buy" class="nav-link">Buy</a>
+                        <a href="/sniper" class="nav-link">Sniper</a>
                     </li>
                     <li class="nav-item pe-5">
-                        <a href="/rent" class="nav-link">Rent</a>
+                        <a href="/battering_ram" class="nav-link">Battering Ram</a>
+                    </li>
+                    <li class="nav-item pe-5">
+                        <a href="/pitchfork" class="nav-link">Pitchfork</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/sell" class="nav-link">Sell</a>
+                        <a href="/cluster_bomb" class="nav-link">Cluster Bomb</a>
                     </li>
                 </ul>
             </div>
             <div class="me-auto order-0">
                 <a class="navbar-brand top-0" href="/">
-                    <img src="/static/image/Willow.png" alt="Logo" width="120px" />
+                    <!-- <img src="/static/image/Willow.png" alt="Logo" width="120px" /> --> BurpIntrude Intro
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
@@ -63,7 +66,7 @@
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header text-center">
-                                    <h5 class="modal-title" id="loginModalTitle">Welcome to Willoz</h5>
+                                    <h5 class="modal-title" id="loginModalTitle">Welcome to BurpIntrude Intro</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
