--- a/box/app/templates/battering_ram.html
+++ b/box/app/templates/battering_ram.html
@@ -4,7 +4,10 @@
 <html>
   <body>
     <h1> Battering Ram </h1>
-    <br></br>
+    <div class="w-40" style="padding-left: 5%">
+      <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/our-battering-ram-michael-maslin.jpg" 
+          width="800px" height="500px">
+    </div>
     <h3>How does battering ram work?</h3>
     <p>Battering ram takes a word from payload, inputs them in all parameters, and continues until there is a result. </p>
     <h3>How many requests does it make?</h3>
