--- a/box/app/templates/cluster_bomb.html
+++ b/box/app/templates/cluster_bomb.html
@@ -4,7 +4,9 @@
 <html>
   <body>
     <h1> Cluster Bomb </h1>
-    <br></br>
+    <div class="w-40" style="padding-left: 5%">
+      <img src="/static/image/clusterbomb.jpg" width="800px" />
+    </div>
     <h3>How does cluster bomb work?</h3>
     <p>Cluster bomb is similar to pitchfork except it runs all possible combinations of the payloads inputted. </p>
     <h5>Examples:</h5>
