--- a/box/app/templates/index.html
+++ b/box/app/templates/index.html
@@ -13,6 +13,10 @@
     <ul>
       <li>Payload - In these situations, this refers to wordlists that will contain some input information, including usernames and/or passwords.</li>
     </ul>
+    <div class="w-40" style="padding-left: 5%">
+      <img src="https://i.redd.it/2r8ylwtzdl871.jpg" 
+          alt="Fluid Image" width="1400px">
+    </div>
   </body>
 </html>
 
