--- a/box/app/templates/pitchfork.html
+++ b/box/app/templates/pitchfork.html
@@ -3,15 +3,11 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <ul>
-      <a href = "/">Home</a>
-      <a href = "/sniper">Sniper</a>
-      <a href = "/battering_ram">Battering Ram</a>
-      <a href = "/pitchfork">Pitchfork</a>
-      <a href = "/cluster_bomb">Cluster Bomb</a>  
-    </ul>
     <h1> Pitchfork </h1>
-    <br></br>
+    <div class="w-40" style="padding-left: 5%">
+      <img src="https://previews.123rf.com/images/iimages/iimages2205/iimages220502332/186220641-farmer-pig-holding-rake-with-haystack-illustration.jpg" 
+          alt="Fluid Image" width="800px" height="500px">
+    </div>
     <h3>How does pitchfork work?</h3>
     <p>Pitchfork takes the nth index in each payload.</p>
     <h5>Examples:</h5>
