--- a/box/app/templates/sniper.html
+++ b/box/app/templates/sniper.html
@@ -4,7 +4,10 @@
 <html>
   <body>
     <h1> Sniper </h1>
-    <br></br>
+    <div class="w-40" style="padding-left: 5%">
+      <img src="https://letsdraw.it/drawing/y7f7pmfry.svg" 
+          alt="Fluid Image" height="500px" width="800px">
+    </div>
     <h3>How does sniper work?</h3>
     <p>Sniper takes 1 payload and places each word in the payload into the position. </p>
     <h3>How many requests does it make?</h3>
