secret_passwords update

--- a/box/app/templates/SUPER_SECRET_PASSWORDS.html
+++ b/box/app/templates/SUPER_SECRET_PASSWORDS.html
@@ -5,6 +5,7 @@
   <body>
     <h1> ADMIN ACCESS ONLY </h1>
     <h3>The following passwords have recently been enterred.</h3>
+    <p>{{ response }}</p>
     <p>Note: Commoners are advised to not click on the funny link below.</p>
   </body>
 </html>
