Added emails and password lists

--- a/box/app/templates/pitchfork.html
+++ b/box/app/templates/pitchfork.html
@@ -20,6 +20,28 @@
     <p>Pitchfork will make as many requests as the length of the shortest payload. </p>
     <h3>What is pitchfork useful for?</h3>
     <p>Very useful when an attack needs 2 different but related parameters. For example, the username and password in the examples above.</p>
+
+    <P>Emails</P>
+    <ul>
+      <li>kefir197979@sangitasinha.click</li>
+      <li>lou0268@evgeniyvis.website</li>
+      <li>matangelauxine@sihirfm.net</li>
+      <li>hexans@haicaotv2.com</li>
+      <li>centyrion3@packmein.life</li>
+      <li>blondin21@dontdemoit.com</li>
+      <li>vladsurovcev@rhafhamed.online</li>
+    </ul>
+
+    <p>Birthdays</p>
+    <ul>
+      <li>03292002</li>
+      <li>08191985</li>
+      <li>05241998</li>
+      <li>04192001</li>
+      <li>10051985</li>
+      <li>05112002</li>
+      <li>10051983</li>
+    </ul>
   </body>
 </html>
 
