--- a/box/app/templates/profile.html
+++ b/box/app/templates/profile.html
@@ -4,7 +4,7 @@
 <html>
   <body>
     {% if admin %}
-    <a href="/SUPER_SECRET_PASSWORDS" class="link">SUPER SECRET PASSWORDS</a>
+    <a href="/secret" class="link">SUPER SECRET ADMIN THINGS</a>
     {% endif %}
     <h1> USER PROFILE </h1>
     <h3>Password Change</h3>
